@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,6 +18,7 @@
 
 package org.apache.hadoop.hive.ql.plan;
 
+import org.apache.hadoop.hive.ql.optimizer.signature.Signature;
 import org.apache.hadoop.hive.ql.plan.Explain.Level;
 import org.apache.hadoop.hive.ql.plan.Explain.Vectorization;
 
@@ -51,13 +52,14 @@ public class LimitDesc extends AbstractOperatorDesc {
    */
   @Explain(displayName = "Offset of rows", explainLevels = { Level.USER, Level.DEFAULT, Level.EXTENDED })
   public Integer getOffset() {
-    return (offset == 0) ? null : new Integer(offset);
+    return (offset == 0) ? null : Integer.valueOf(offset);
   }
 
   public void setOffset(Integer offset) {
     this.offset = offset;
   }
 
+  @Signature
   @Explain(displayName = "Number of rows", explainLevels = { Level.USER, Level.DEFAULT, Level.EXTENDED })
   public int getLimit() {
     return limit;
@@ -100,4 +102,5 @@ public class LimitDesc extends AbstractOperatorDesc {
     }
     return false;
   }
+
 }
